--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-28 12:42+0000\n"
+"PO-Revision-Date: 2025-05-29 14:14+0000\n"
 "Last-Translator: \n"
 "Language-Team: English (United States)\n"
 "Language: en_US\n"
@@ -196,197 +196,388 @@ msgstr ""
 msgid "dis-project"
 msgstr ""
 
-#: config-theme.php:106
+#: config-pages.php:313
+msgctxt "DIS_ActivationItems"
+msgid "AboutUsPageSlug"
+msgstr "about-us"
+
+#: config-pages.php:314
+msgctxt "DIS_ActivationItems"
+msgid "AboutUsPageTitle"
+msgstr "About us"
+
+#: config-pages.php:305
+msgctxt "DIS_ActivationItems"
+msgid "AccessibilityPageSlug"
+msgstr "accessibility"
+
+#: config-pages.php:306
+msgctxt "DIS_ActivationItems"
+msgid "AccessibilityPageTitle"
+msgstr "Accessibility"
+
+#: config-pages.php:320
+msgctxt "DIS_ActivationItems"
+msgid "ArticlePageSlug"
+msgstr "articles"
+
+#: config-pages.php:321
+msgctxt "DIS_ActivationItems"
+msgid "ArticlePageTitle"
+msgstr "Articles"
+
+#: config-pages.php:297
+msgctxt "DIS_ActivationItems"
+msgid "ContactsPageSlug"
+msgstr "contacts"
+
+#: config-pages.php:298
+msgctxt "DIS_ActivationItems"
+msgid "ContactsPageTitle"
+msgstr "Contacts"
+
+#: config-pages.php:315
+msgctxt "DIS_ActivationItems"
+msgid "DocumentationPageSlug"
+msgstr "documentation"
+
+#: config-pages.php:316
+msgctxt "DIS_ActivationItems"
+msgid "DocumentationPageTitle"
+msgstr "Documentation"
+
+#: config-pages.php:326
+msgctxt "DIS_ActivationItems"
+msgid "EventPageSlug"
+msgstr "events"
+
+#: config-pages.php:327
+msgctxt "DIS_ActivationItems"
+msgid "EventPageTitle"
+msgstr "Events"
+
+#: config-pages.php:317
+msgctxt "DIS_ActivationItems"
+msgid "FaqPageSlug"
+msgstr "faq"
+
+#: config-pages.php:318
+msgctxt "DIS_ActivationItems"
+msgid "FaqPageTitle"
+msgstr "Faq"
+
+#: config-pages.php:307
+msgctxt "DIS_ActivationItems"
+msgid "LegalNotesPageSlug"
+msgstr "legal-notes"
+
+#: config-pages.php:308
+msgctxt "DIS_ActivationItems"
+msgid "LegalNotesPageTitle"
+msgstr "Legal notes"
+
+#: config-pages.php:311
+msgctxt "DIS_ActivationItems"
+msgid "MediaPolicyPageSlug"
+msgstr "media-policy"
+
+#: config-pages.php:312
+msgctxt "DIS_ActivationItems"
+msgid "MediaPolicyPageTitle"
+msgstr "Media policy"
+
+#: config-pages.php:303
+msgctxt "DIS_ActivationItems"
+msgid "NewsletterPageSlug"
+msgstr "newsletter"
+
+#: config-pages.php:304
+msgctxt "DIS_ActivationItems"
+msgid "NewsletterPageTitle"
+msgstr "Newsletter"
+
+#: config-pages.php:322
+msgctxt "DIS_ActivationItems"
+msgid "OfficePageSlug"
+msgstr "offices"
+
+#: config-pages.php:323
+msgctxt "DIS_ActivationItems"
+msgid "OfficePageTitle"
+msgstr "Offices"
+
+#: config-pages.php:330
+msgctxt "DIS_ActivationItems"
+msgid "PeoplePageSlug"
+msgstr "people"
+
+#: config-pages.php:331
+msgctxt "DIS_ActivationItems"
+msgid "PeoplePageTitle"
+msgstr "People"
+
+#: config-pages.php:324
+msgctxt "DIS_ActivationItems"
+msgid "PlacePageSlug"
+msgstr "places"
+
+#: config-pages.php:325
+msgctxt "DIS_ActivationItems"
+msgid "PlacePageTitle"
+msgstr "Places"
+
+#: config-pages.php:301
+msgctxt "DIS_ActivationItems"
+msgid "PrivacyPageSlug"
+msgstr "privacy"
+
+#: config-pages.php:302
+msgctxt "DIS_ActivationItems"
+msgid "PrivacyPageTitle"
+msgstr "Privacy policy "
+
+#: config-pages.php:328
+msgctxt "DIS_ActivationItems"
+msgid "ProjectPageSlug"
+msgstr "projects"
+
+#: config-pages.php:329
+msgctxt "DIS_ActivationItems"
+msgid "ProjectPageTitle"
+msgstr "Projects"
+
+#: config-pages.php:332
+msgctxt "DIS_ActivationItems"
+msgid "ServiceClusterPageSlug"
+msgstr "service-clusters"
+
+#: config-pages.php:333
+msgctxt "DIS_ActivationItems"
+msgid "ServiceClusterPageTitle"
+msgstr "Service clusters"
+
+#: config-pages.php:334
+msgctxt "DIS_ActivationItems"
+msgid "ServiceItemPageSlug"
+msgstr "services"
+
+#: config-pages.php:335
+msgctxt "DIS_ActivationItems"
+msgid "ServiceItemPageTitle"
+msgstr "Services"
+
+#: config-pages.php:299
+msgctxt "DIS_ActivationItems"
+msgid "SiteMapPageSlug"
+msgstr "site-map"
+
+#: config-pages.php:300
+msgctxt "DIS_ActivationItems"
+msgid "SiteMapPageTitle"
+msgstr "Site map"
+
+#: config-pages.php:309
+msgctxt "DIS_ActivationItems"
+msgid "SiteSearchPageSlug"
+msgstr "site-search"
+
+#: config-pages.php:310
+msgctxt "DIS_ActivationItems"
+msgid "SiteSearchPageTitle"
+msgstr "Site search"
+
+#: config-theme.php:108
 msgctxt "DIS_PostTypeLabels"
 msgid "Article"
 msgstr "Article"
 
-#: config-theme.php:107
+#: config-theme.php:109
 msgctxt "DIS_PostTypeLabels"
 msgid "Articles"
 msgstr "Articles"
 
-#: config-theme.php:108
+#: config-theme.php:110
 msgctxt "DIS_PostTypeLabels"
 msgid "articles"
 msgstr "articles"
 
-#: config-theme.php:82
+#: config-theme.php:84
 msgctxt "DIS_PostTypeLabels"
 msgid "Attachment"
 msgstr "Attachment"
 
-#: config-theme.php:83
+#: config-theme.php:85
 msgctxt "DIS_PostTypeLabels"
 msgid "Attachments"
 msgstr "Attachments"
 
-#: config-theme.php:84
+#: config-theme.php:86
 msgctxt "DIS_PostTypeLabels"
 msgid "attachments"
 msgstr "attachments"
 
-#: config-theme.php:88
+#: config-theme.php:90
 msgctxt "DIS_PostTypeLabels"
 msgid "Banner"
 msgstr "Banner"
 
-#: config-theme.php:89
+#: config-theme.php:91
 msgctxt "DIS_PostTypeLabels"
 msgid "Banners"
 msgstr "Banners"
 
-#: config-theme.php:90
+#: config-theme.php:92
 msgctxt "DIS_PostTypeLabels"
 msgid "banners"
 msgstr "banners"
 
-#: config-theme.php:40
+#: config-theme.php:42 page-templates/people.php:19
+#: page-templates/people.php:24 page-templates/people.php:29
 msgctxt "DIS_PostTypeLabels"
 msgid "Event"
 msgstr "Event"
 
-#: config-theme.php:41
+#: config-theme.php:43
 msgctxt "DIS_PostTypeLabels"
 msgid "Events"
 msgstr "Events"
 
-#: config-theme.php:42
+#: config-theme.php:44
 msgctxt "DIS_PostTypeLabels"
 msgid "events"
 msgstr "events"
 
-#: config-theme.php:52
+#: config-theme.php:54
 msgctxt "DIS_PostTypeLabels"
 msgid "Office"
 msgstr "Office"
 
-#: config-theme.php:53
+#: config-theme.php:55
 msgctxt "DIS_PostTypeLabels"
 msgid "Offices"
 msgstr "Offices"
 
-#: config-theme.php:54
+#: config-theme.php:56
 msgctxt "DIS_PostTypeLabels"
 msgid "offices"
 msgstr "offices"
 
-#: config-theme.php:112
+#: config-theme.php:114
 msgctxt "DIS_PostTypeLabels"
 msgid "Page"
 msgstr "Page"
 
-#: config-theme.php:113
+#: config-theme.php:115
 msgctxt "DIS_PostTypeLabels"
 msgid "Pages"
 msgstr "Pages"
 
-#: config-theme.php:114
+#: config-theme.php:116
 msgctxt "DIS_PostTypeLabels"
 msgid "pages"
 msgstr "pages"
 
-#: config-theme.php:72
+#: config-theme.php:74
 msgctxt "DIS_PostTypeLabels"
 msgid "people"
 msgstr "people"
 
-#: config-theme.php:70
+#: config-theme.php:72
 msgctxt "DIS_PostTypeLabels"
 msgid "Person"
 msgstr "Person"
 
-#: config-theme.php:71
+#: config-theme.php:73
 msgctxt "DIS_PostTypeLabels"
 msgid "Persons"
 msgstr "Persons"
 
-#: config-theme.php:76
+#: config-theme.php:78
 msgctxt "DIS_PostTypeLabels"
 msgid "Place"
 msgstr "Place"
 
-#: config-theme.php:77
+#: config-theme.php:79
 msgctxt "DIS_PostTypeLabels"
 msgid "Places"
 msgstr "Places"
 
-#: config-theme.php:78
+#: config-theme.php:80
 msgctxt "DIS_PostTypeLabels"
 msgid "places"
 msgstr "places"
 
-#: config-theme.php:46
+#: config-theme.php:48
 msgctxt "DIS_PostTypeLabels"
 msgid "Project"
 msgstr "Project"
 
-#: config-theme.php:47
+#: config-theme.php:49
 msgctxt "DIS_PostTypeLabels"
 msgid "Projects"
 msgstr "Projects"
 
-#: config-theme.php:48
+#: config-theme.php:50
 msgctxt "DIS_PostTypeLabels"
 msgid "projects"
 msgstr "projects"
 
-#: config-theme.php:64
+#: config-theme.php:66
 msgctxt "DIS_PostTypeLabels"
 msgid "Service"
 msgstr "Service"
 
-#: config-theme.php:58
+#: config-theme.php:60
 msgctxt "DIS_PostTypeLabels"
 msgid "Service Cluster"
 msgstr "Service Cluster"
 
-#: config-theme.php:59
+#: config-theme.php:61
 msgctxt "DIS_PostTypeLabels"
 msgid "Service Clusters"
 msgstr "Service Clusters"
 
-#: config-theme.php:60
+#: config-theme.php:62
 msgctxt "DIS_PostTypeLabels"
 msgid "service-clusters"
 msgstr "service-clusters"
 
-#: config-theme.php:65
+#: config-theme.php:67
 msgctxt "DIS_PostTypeLabels"
 msgid "Services"
 msgstr "Services"
 
-#: config-theme.php:66
+#: config-theme.php:68
 msgctxt "DIS_PostTypeLabels"
 msgid "services"
 msgstr "services"
 
-#: config-theme.php:94
+#: config-theme.php:96
 msgctxt "DIS_PostTypeLabels"
 msgid "Sponsor"
 msgstr "Sponsor"
 
-#: config-theme.php:95
+#: config-theme.php:97
 msgctxt "DIS_PostTypeLabels"
 msgid "Sponsors"
 msgstr "Sponsors"
 
-#: config-theme.php:96
+#: config-theme.php:98
 msgctxt "DIS_PostTypeLabels"
 msgid "sponsors"
 msgstr "sponsors"
 
-#: config-theme.php:100
+#: config-theme.php:102
 msgctxt "DIS_PostTypeLabels"
 msgid "User Status"
 msgstr "User Status"
 
-#: config-theme.php:102
+#: config-theme.php:104
 msgctxt "DIS_PostTypeLabels"
 msgid "user-status"
 msgstr "user-status"
 
-#: config-theme.php:101
+#: config-theme.php:103
 msgctxt "DIS_PostTypeLabels"
 msgid "Users Status"
 msgstr "Users Status"
@@ -595,8 +786,8 @@ msgstr ""
 msgid "Header logo visible"
 msgstr ""
 
-#: template-parts/home/hp-main-hero-section.php:36
-#: template-parts/home/hp-main-hero-section.php:37
+#: template-parts/home/hp-main-hero-section.php:32
+#: template-parts/home/hp-main-hero-section.php:33
 msgid "Hero image"
 msgstr ""
 
@@ -783,7 +974,7 @@ msgstr ""
 msgid "Network url"
 msgstr ""
 
-#: classes/activation-manager.php:228
+#: classes/activation-manager.php:229
 #, php-format
 msgid "NEW menu '%s' created."
 msgstr ""
@@ -825,13 +1016,13 @@ msgstr ""
 msgid "Our services"
 msgstr "Our services"
 
-#: classes/options-manager.php:942
-msgid "Page counters"
+#: template-parts/common/pagination.php:55
+#: template-parts/common/pagination.php:70
+msgid "page"
 msgstr ""
 
-#: template-parts/common/pagination.php:55
-#: template-parts/common/pagination.php:68
-msgid "pagina"
+#: classes/options-manager.php:942
+msgid "Page counters"
 msgstr ""
 
 #: classes/person-manager.php:44
@@ -983,7 +1174,7 @@ msgstr ""
 msgid "Site contacts"
 msgstr ""
 
-#: template-parts/home/hp-main-hero-section.php:58
+#: template-parts/home/hp-main-hero-section.php:54
 msgid "Site search"
 msgstr ""
 
@@ -1021,17 +1212,17 @@ msgstr ""
 msgid "Success"
 msgstr ""
 
-#: classes/activation-manager.php:101
+#: classes/activation-manager.php:102
 #, php-format
 msgid "Successfully created the page: '%s'."
 msgstr ""
 
-#: classes/activation-manager.php:161
+#: classes/activation-manager.php:162
 #, php-format
 msgid "Table '%s successfully created."
 msgstr ""
 
-#: classes/activation-manager.php:164
+#: classes/activation-manager.php:165
 #, php-format
 msgid "Table '%s' already present."
 msgstr ""
@@ -1076,7 +1267,7 @@ msgstr ""
 msgid "The logo of the site, please load an SVG image."
 msgstr ""
 
-#: classes/activation-manager.php:178
+#: classes/activation-manager.php:179
 #, php-format
 msgid "The menu '%s' already exists."
 msgstr ""
