--- a/languages/it_IT.po
+++ b/languages/it_IT.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Design ICT Site\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-03-10 08:30+0000\n"
-"PO-Revision-Date: 2025-05-28 12:44+0000\n"
+"PO-Revision-Date: 2025-05-29 14:15+0000\n"
 "Last-Translator: \n"
 "Language-Team: Italiano\n"
 "Language: it_IT\n"
@@ -202,197 +202,388 @@ msgstr "dis-person"
 msgid "dis-project"
 msgstr "dis-project"
 
-#: config-theme.php:106
+#: config-pages.php:313
+msgctxt "DIS_ActivationItems"
+msgid "AboutUsPageSlug"
+msgstr "chi-siamo"
+
+#: config-pages.php:314
+msgctxt "DIS_ActivationItems"
+msgid "AboutUsPageTitle"
+msgstr "Chi siamo"
+
+#: config-pages.php:305
+msgctxt "DIS_ActivationItems"
+msgid "AccessibilityPageSlug"
+msgstr "accessibilita"
+
+#: config-pages.php:306
+msgctxt "DIS_ActivationItems"
+msgid "AccessibilityPageTitle"
+msgstr "Accessibilità"
+
+#: config-pages.php:320
+msgctxt "DIS_ActivationItems"
+msgid "ArticlePageSlug"
+msgstr "articoli"
+
+#: config-pages.php:321
+msgctxt "DIS_ActivationItems"
+msgid "ArticlePageTitle"
+msgstr "Articoli"
+
+#: config-pages.php:297
+msgctxt "DIS_ActivationItems"
+msgid "ContactsPageSlug"
+msgstr "contatti"
+
+#: config-pages.php:298
+msgctxt "DIS_ActivationItems"
+msgid "ContactsPageTitle"
+msgstr "Contatti"
+
+#: config-pages.php:315
+msgctxt "DIS_ActivationItems"
+msgid "DocumentationPageSlug"
+msgstr "documentazione"
+
+#: config-pages.php:316
+msgctxt "DIS_ActivationItems"
+msgid "DocumentationPageTitle"
+msgstr "Documentazione"
+
+#: config-pages.php:326
+msgctxt "DIS_ActivationItems"
+msgid "EventPageSlug"
+msgstr "eventi"
+
+#: config-pages.php:327
+msgctxt "DIS_ActivationItems"
+msgid "EventPageTitle"
+msgstr "Eventi"
+
+#: config-pages.php:317
+msgctxt "DIS_ActivationItems"
+msgid "FaqPageSlug"
+msgstr "faq-it"
+
+#: config-pages.php:318
+msgctxt "DIS_ActivationItems"
+msgid "FaqPageTitle"
+msgstr "Faq"
+
+#: config-pages.php:307
+msgctxt "DIS_ActivationItems"
+msgid "LegalNotesPageSlug"
+msgstr "note-legali"
+
+#: config-pages.php:308
+msgctxt "DIS_ActivationItems"
+msgid "LegalNotesPageTitle"
+msgstr "Note legali"
+
+#: config-pages.php:311
+msgctxt "DIS_ActivationItems"
+msgid "MediaPolicyPageSlug"
+msgstr "media-policy-it"
+
+#: config-pages.php:312
+msgctxt "DIS_ActivationItems"
+msgid "MediaPolicyPageTitle"
+msgstr "Media policy"
+
+#: config-pages.php:303
+msgctxt "DIS_ActivationItems"
+msgid "NewsletterPageSlug"
+msgstr "newsletter-it"
+
+#: config-pages.php:304
+msgctxt "DIS_ActivationItems"
+msgid "NewsletterPageTitle"
+msgstr "Newsletter"
+
+#: config-pages.php:322
+msgctxt "DIS_ActivationItems"
+msgid "OfficePageSlug"
+msgstr "uffici"
+
+#: config-pages.php:323
+msgctxt "DIS_ActivationItems"
+msgid "OfficePageTitle"
+msgstr "Uffici"
+
+#: config-pages.php:330
+msgctxt "DIS_ActivationItems"
+msgid "PeoplePageSlug"
+msgstr "persone"
+
+#: config-pages.php:331
+msgctxt "DIS_ActivationItems"
+msgid "PeoplePageTitle"
+msgstr "Persone"
+
+#: config-pages.php:324
+msgctxt "DIS_ActivationItems"
+msgid "PlacePageSlug"
+msgstr "luoghi"
+
+#: config-pages.php:325
+msgctxt "DIS_ActivationItems"
+msgid "PlacePageTitle"
+msgstr "Luoghi"
+
+#: config-pages.php:301
+msgctxt "DIS_ActivationItems"
+msgid "PrivacyPageSlug"
+msgstr "privacy-it"
+
+#: config-pages.php:302
+msgctxt "DIS_ActivationItems"
+msgid "PrivacyPageTitle"
+msgstr "Privacy policy "
+
+#: config-pages.php:328
+msgctxt "DIS_ActivationItems"
+msgid "ProjectPageSlug"
+msgstr "progetti"
+
+#: config-pages.php:329
+msgctxt "DIS_ActivationItems"
+msgid "ProjectPageTitle"
+msgstr "Progetti"
+
+#: config-pages.php:332
+msgctxt "DIS_ActivationItems"
+msgid "ServiceClusterPageSlug"
+msgstr "gruppi-servizi"
+
+#: config-pages.php:333
+msgctxt "DIS_ActivationItems"
+msgid "ServiceClusterPageTitle"
+msgstr "Gruppi di servizi"
+
+#: config-pages.php:334
+msgctxt "DIS_ActivationItems"
+msgid "ServiceItemPageSlug"
+msgstr "servizi"
+
+#: config-pages.php:335
+msgctxt "DIS_ActivationItems"
+msgid "ServiceItemPageTitle"
+msgstr "Servizi"
+
+#: config-pages.php:299
+msgctxt "DIS_ActivationItems"
+msgid "SiteMapPageSlug"
+msgstr "mappa-sito"
+
+#: config-pages.php:300
+msgctxt "DIS_ActivationItems"
+msgid "SiteMapPageTitle"
+msgstr "Mappa del sito"
+
+#: config-pages.php:309
+msgctxt "DIS_ActivationItems"
+msgid "SiteSearchPageSlug"
+msgstr "ricerca-sito"
+
+#: config-pages.php:310
+msgctxt "DIS_ActivationItems"
+msgid "SiteSearchPageTitle"
+msgstr "Ricerca sito"
+
+#: config-theme.php:108
 msgctxt "DIS_PostTypeLabels"
 msgid "Article"
 msgstr "Articolo"
 
-#: config-theme.php:107
+#: config-theme.php:109
 msgctxt "DIS_PostTypeLabels"
 msgid "Articles"
 msgstr "Articoli"
 
-#: config-theme.php:108
+#: config-theme.php:110
 msgctxt "DIS_PostTypeLabels"
 msgid "articles"
 msgstr "articoli"
 
-#: config-theme.php:82
+#: config-theme.php:84
 msgctxt "DIS_PostTypeLabels"
 msgid "Attachment"
 msgstr "Allegato"
 
-#: config-theme.php:83
+#: config-theme.php:85
 msgctxt "DIS_PostTypeLabels"
 msgid "Attachments"
 msgstr "Allegati"
 
-#: config-theme.php:84
+#: config-theme.php:86
 msgctxt "DIS_PostTypeLabels"
 msgid "attachments"
 msgstr "allegati"
 
-#: config-theme.php:88
+#: config-theme.php:90
 msgctxt "DIS_PostTypeLabels"
 msgid "Banner"
 msgstr "Banner"
 
-#: config-theme.php:89
+#: config-theme.php:91
 msgctxt "DIS_PostTypeLabels"
 msgid "Banners"
 msgstr "Banner"
 
-#: config-theme.php:90
+#: config-theme.php:92
 msgctxt "DIS_PostTypeLabels"
 msgid "banners"
 msgstr "banner"
 
-#: config-theme.php:40
+#: config-theme.php:42 page-templates/people.php:19
+#: page-templates/people.php:24 page-templates/people.php:29
 msgctxt "DIS_PostTypeLabels"
 msgid "Event"
 msgstr "Evento"
 
-#: config-theme.php:41
+#: config-theme.php:43
 msgctxt "DIS_PostTypeLabels"
 msgid "Events"
 msgstr "Eventi"
 
-#: config-theme.php:42
+#: config-theme.php:44
 msgctxt "DIS_PostTypeLabels"
 msgid "events"
 msgstr "eventi"
 
-#: config-theme.php:52
+#: config-theme.php:54
 msgctxt "DIS_PostTypeLabels"
 msgid "Office"
 msgstr "Ufficio"
 
-#: config-theme.php:53
+#: config-theme.php:55
 msgctxt "DIS_PostTypeLabels"
 msgid "Offices"
 msgstr "Uffici"
 
-#: config-theme.php:54
+#: config-theme.php:56
 msgctxt "DIS_PostTypeLabels"
 msgid "offices"
 msgstr "uffici"
 
-#: config-theme.php:112
+#: config-theme.php:114
 msgctxt "DIS_PostTypeLabels"
 msgid "Page"
 msgstr "Pagine"
 
-#: config-theme.php:113
+#: config-theme.php:115
 msgctxt "DIS_PostTypeLabels"
 msgid "Pages"
 msgstr "Pagine"
 
-#: config-theme.php:114
+#: config-theme.php:116
 msgctxt "DIS_PostTypeLabels"
 msgid "pages"
 msgstr "pagine"
 
-#: config-theme.php:72
+#: config-theme.php:74
 msgctxt "DIS_PostTypeLabels"
 msgid "people"
 msgstr "persone"
 
-#: config-theme.php:70
+#: config-theme.php:72
 msgctxt "DIS_PostTypeLabels"
 msgid "Person"
 msgstr "Persona"
 
-#: config-theme.php:71
+#: config-theme.php:73
 msgctxt "DIS_PostTypeLabels"
 msgid "Persons"
 msgstr "Persone"
 
-#: config-theme.php:76
+#: config-theme.php:78
 msgctxt "DIS_PostTypeLabels"
 msgid "Place"
 msgstr "Luogo"
 
-#: config-theme.php:77
+#: config-theme.php:79
 msgctxt "DIS_PostTypeLabels"
 msgid "Places"
 msgstr "Luoghi"
 
-#: config-theme.php:78
+#: config-theme.php:80
 msgctxt "DIS_PostTypeLabels"
 msgid "places"
 msgstr "luoghi"
 
-#: config-theme.php:46
+#: config-theme.php:48
 msgctxt "DIS_PostTypeLabels"
 msgid "Project"
 msgstr "Progetto"
 
-#: config-theme.php:47
+#: config-theme.php:49
 msgctxt "DIS_PostTypeLabels"
 msgid "Projects"
 msgstr "Progetti"
 
-#: config-theme.php:48
+#: config-theme.php:50
 msgctxt "DIS_PostTypeLabels"
 msgid "projects"
 msgstr "progetti"
 
-#: config-theme.php:64
+#: config-theme.php:66
 msgctxt "DIS_PostTypeLabels"
 msgid "Service"
 msgstr "Servizio"
 
-#: config-theme.php:58
+#: config-theme.php:60
 msgctxt "DIS_PostTypeLabels"
 msgid "Service Cluster"
 msgstr "Gruppo Servizi"
 
-#: config-theme.php:59
+#: config-theme.php:61
 msgctxt "DIS_PostTypeLabels"
 msgid "Service Clusters"
 msgstr "Gruppi Servizi"
 
-#: config-theme.php:60
+#: config-theme.php:62
 msgctxt "DIS_PostTypeLabels"
 msgid "service-clusters"
 msgstr "gruppi-servizi"
 
-#: config-theme.php:65
+#: config-theme.php:67
 msgctxt "DIS_PostTypeLabels"
 msgid "Services"
 msgstr "Servizi"
 
-#: config-theme.php:66
+#: config-theme.php:68
 msgctxt "DIS_PostTypeLabels"
 msgid "services"
 msgstr "servizi"
 
-#: config-theme.php:94
+#: config-theme.php:96
 msgctxt "DIS_PostTypeLabels"
 msgid "Sponsor"
 msgstr "Sponsor"
 
-#: config-theme.php:95
+#: config-theme.php:97
 msgctxt "DIS_PostTypeLabels"
 msgid "Sponsors"
 msgstr "Sponsor"
 
-#: config-theme.php:96
+#: config-theme.php:98
 msgctxt "DIS_PostTypeLabels"
 msgid "sponsors"
 msgstr "sponsor"
 
-#: config-theme.php:100
+#: config-theme.php:102
 msgctxt "DIS_PostTypeLabels"
 msgid "User Status"
 msgstr "Stato Utente"
 
-#: config-theme.php:102
+#: config-theme.php:104
 msgctxt "DIS_PostTypeLabels"
 msgid "user-status"
 msgstr "stato-utente"
 
-#: config-theme.php:101
+#: config-theme.php:103
 msgctxt "DIS_PostTypeLabels"
 msgid "Users Status"
 msgstr "Stato Utente"
@@ -610,8 +801,8 @@ msgstr "Vai alla pagina"
 msgid "Header logo visible"
 msgstr "Logo dell'intestazione visibile"
 
-#: template-parts/home/hp-main-hero-section.php:36
-#: template-parts/home/hp-main-hero-section.php:37
+#: template-parts/home/hp-main-hero-section.php:32
+#: template-parts/home/hp-main-hero-section.php:33
 msgid "Hero image"
 msgstr "Immagine dell'hero"
 
@@ -798,7 +989,7 @@ msgstr "Nome del Network"
 msgid "Network url"
 msgstr "Indirizzo del Network"
 
-#: classes/activation-manager.php:228
+#: classes/activation-manager.php:229
 #, php-format
 msgid "NEW menu '%s' created."
 msgstr "NUOVO menu '%s' creato."
@@ -840,14 +1031,14 @@ msgstr "No"
 msgid "Our services"
 msgstr "I nostri servizi"
 
+#: template-parts/common/pagination.php:55
+#: template-parts/common/pagination.php:70
+msgid "page"
+msgstr "pagina"
+
 #: classes/options-manager.php:942
 msgid "Page counters"
 msgstr "Contatori di pagina"
-
-#: template-parts/common/pagination.php:55
-#: template-parts/common/pagination.php:68
-msgid "pagina"
-msgstr ""
 
 #: classes/person-manager.php:44
 msgid "Person Roles"
@@ -998,7 +1189,7 @@ msgstr "Configurazioni del sito"
 msgid "Site contacts"
 msgstr "Contatti del sito"
 
-#: template-parts/home/hp-main-hero-section.php:58
+#: template-parts/home/hp-main-hero-section.php:54
 msgid "Site search"
 msgstr "Ricerca nel sito"
 
@@ -1036,17 +1227,17 @@ msgstr "Alcuni plugin richiedono l'abilitazione dell'API REST."
 msgid "Success"
 msgstr "Seccesso"
 
-#: classes/activation-manager.php:101
+#: classes/activation-manager.php:102
 #, php-format
 msgid "Successfully created the page: '%s'."
 msgstr "Creata con successo la pagina: '%s'."
 
-#: classes/activation-manager.php:161
+#: classes/activation-manager.php:162
 #, php-format
 msgid "Table '%s successfully created."
 msgstr "Creata con successo la tabella '%s'."
 
-#: classes/activation-manager.php:164
+#: classes/activation-manager.php:165
 #, php-format
 msgid "Table '%s' already present."
 msgstr "La tabella '%s' è già presente."
@@ -1091,7 +1282,7 @@ msgstr "L'immagine è troppo grande. Il massimo consentito è 1 MB."
 msgid "The logo of the site, please load an SVG image."
 msgstr "Il logo del sito, carica un'immagine SVG."
 
-#: classes/activation-manager.php:178
+#: classes/activation-manager.php:179
 #, php-format
 msgid "The menu '%s' already exists."
 msgstr "Il menu '%s' esiste già."
